2005-09-07  Erez Zadok  <ezk@cs.sunysb.edu>

	* minor new port: i386-pc-linux-deb3.1.

2005-09-02  Erez Zadok  <ezk@cs.sunysb.edu>

	* conf/mount/mount_linux.c: If autoconf didn't find any disk-based
	file system on this system (probably because /proc isn't mounted),
	then provide some default definition for this file to compile.

2005-08-28  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>

	* amd/sun_map.c (sun_entry2amd) : Wipe out any trailing white
	spaces or '\n' before passing strings to the parser.

	* amd/amd.h : oops, reverting bad changes

	* amd/info_file.c : oops, reverting bad changes

	* amd/mapc.c : oops, reverting bad changes

	* amd/sun_map_parse.y : oops, reverting bad changes

2005-08-27  Erez Zadok  <ezk@cs.sunysb.edu>

	* libamu/xutil.c: amd_program_number is a u_long now.
	(unregister_amq): if pmap_unset failed to de-register Amd from the
	portmapper, print an error message.
	(get_amd_program_number): returns a u_long now.
	(set_amd_program_number): take a u_long now.

	* include/am_utils.h: get_amd_program_number() returns u_long now.
	set_amd_program_number() takes a u_long now.

	* amq/amq.c: amd_program_number is a u_long, not int.

	* amd/nfs_start.c (mount_automounter): when registering Amd with
	the portmapper (for Amq service), don't fail if just one of TCP or
	UDP failed to register, but only if both transports failed.  That
	way Amq can still contact Amd using the transport that did
	register correctly.  However, now, if both transports failed to
	register, then set amd_state to "Done" so it would shutdown
	cleanly.

	* conf/transp/transp_{sockets,tli{}.c (amu_svc_register): better
	comments.

	* libamu/xutil.c: debug_flags should always be initialized to
	D_CONTROL (amq,daemon,fork).
	(debug_option): allow setting initial immutable debug_flags via
	amd.conf; afterward, prevent it (i.e., one tries it via "amq -D").

	* Makefile.am (DISTCLEANFILES): also remove amu_autofs_prot.h,
	config.cache.old, and dbgcf.h on "make distclean".