@@ -158,3 +158,4 @@ A.i386-pc-linux-fc4
 A.i386-pc-linux-suse9.3
 A.i386-pc-linuxoldld-deb3.1
 A.i386-pc-linux-deb3.1
+A.powerpc-apple-darwin8.2.0
